--- a/redux-codecademy/news-reader/public/index.html
+++ b/redux-codecademy/news-reader/public/index.html
@@ -10,7 +10,7 @@
   <main id="root">
   </main>
 	<script src="https://content.codecademy.com/courses/React/react-16-full.min.js"></script>
-  <script src="./index.compiled.js"></script>
+  <script src="../src/index.js"></script>
 </body>
 
 </html>
